# Water-Security-Toolkit

./: CHANGELOG.txt  CMakeLists.txt  INSTALL.md  LICENSE.txt  Makefile.am  README.md  README.txt  configure.ac  teva_config.h.in
admin/: checks  setup.py  wst-repo.yaml
admin/archive/inno-installer/: install.iss  spot.iss  teva-spot-win-debug.iss  teva-spot-win.iss
admin/packaging/: Externals  Makefile  cli.executable  launcher.c  package-wst.sh
admin/vpy/: dev.ini  installer.ini  instlight.ini
admin/wst_admin/: README.txt  setup.py
admin/wst_admin/wst_admin/: scripts.py
config/: acro_platform.m4  ax_prefix_config_h.m4
doc/wst/: Acronyms.tex  Disclaimer.tex  EPAAcknowledgements.tex  Forward.tex  InstallGuide.tex  LicenseNotice.tex  Makefile  Makefile.local  SANDAcknowledgements.tex  Symbols.tex  appendix.tex  booster.tex  executables.tex  flushing.tex  flushing_case_study.tex  formats.tex  gettingstarted.tex  install.tex  intro.tex  inversion.tex  inversion_case_study.tex  lstanchors.out  lstanchors.pl  macros.aux  macros.tex  merlion.tex  sampling.tex  sampling_case_study.tex  sensors.bib  sim2Impact.tex  sp-advanced.notneeded  sp-pmedian.tex  sp.tex  tevasim.tex  titlepg.tex  uq.tex  userman.aux  userman.bbl  userman.blg  userman.out  (+2 more)
doc/wst/.deps/: userman.bbl_d  userman.d
doc/wst/examples/: booster_mip_config.tex  booster_mip_config.yml  booster_msx_config.tex  booster_msx_config.yml  flushing_config.tex  flushing_config.yml  generate_config.py  grabsample_config.tex  grabsample_config.yml  inversion_config.tex  inversion_config.yml  master_config.tex  master_config.yml  sim2Impact_config.tex  sim2Impact_config.yml  sp_config.tex  sp_config.yml  templates.sh  test_example.py  tevasim.yml  tevasim_config.tex  tevasim_config.yml  uq_config.tex  uq_config.yml  verify-wst.txt  visualization_config.tex  visualization_config.yml
doc/wst/executables/: createIPDataExecutable.tex  evalsensorExecutable.tex  filter_impactsExecutable.tex  lagrangianExecutable.tex  measuregenExecutable.tex  picoExecutable.tex  randomsampleExecutable.tex  scenarioAggrExecutable.tex  sideconstraintsExecutable.tex  skelExecutable.tex  sp2tierExecutable.tex  spExecutable.tex  tevasimExecutable.tex  tso2ImpactExecutable.tex
doc/wst/fileFormats/: tiaFormat.txt  tsgFormat.txt  tsgFormat_msx.txt  tsiFormat_msx.txt
doc/wst/graphics/: WST_flowcharts.pptx  plot_inversion_variations.py
doc/wst/spot/: dataRequire.tex  formulations.tex  solvers.tex
etc/mod/: Dynamic.mod  DynamicEnum.mod
etc/tai/: bio.tai  chem.tai
etc/tracer/: Lake_age.txt  Lake_source.txt  Net3_mod.inp  River_age.txt  River_source.txt
etc/tsg/: hourly.tsg  quarterly.tsg
examples/: Makefile.am  booster_mip_ex1.yml  booster_mip_ex2.yml  booster_msx_ex1.yml  booster_msx_ex2.yml  flushing_ex1.yml  flushing_ex2.yml  flushing_ex3.yml  flushing_ex4.yml  grabsample_ex1.yml  grabsample_ex2.yml  inversion_ex1.yml  inversion_ex2.yml  inversion_ex3.yml  sim2Impact_ex1.yml  sim2Impact_ex2.yml  sim2Impact_ex3.yml  sp_ex2.yml  sp_ex3.yml  sp_ex4.yml  sp_ex5.yml  sp_ex6a.yml  sp_ex6b.yml  tevasim_ex1.yml  tevasim_ex2.yml  uq_ex1.yml  visualization_ex1.yml  visualization_ex2.yml
examples/Net3/: Net3.erd  Net3.index.erd  Net3.inp  Net3.tsg  Net3_EColi_TSB-1.hyd.erd  Net3_EColi_TSB-1.qual.erd  Net3_EColi_TSB.erd  Net3_EColi_TSB.index.erd  Net3_EColi_TSB.msx  Net3_EColi_TSB.tsi  Net3_bio.msx  Net3_bio.tai  Net3_bio.tsg  Net3_booster.tsg  Net3_fixed_sensors  Net3_gs_profile.tsg  Net3_hourly_ec.impact  Net3_locations.yml  Net3_mc.impact  Net3_nfd.impact  Net3_vis_ex1.json
examples/case_studies/flushing/: Net6.inp  Net6_Population.txt  Net6_bio.tai  Net6_bio_JUNC1617.tsg  (+4 more)
examples/networks/: BWSN_Network_1.inp  BWSN_Network_2.inp  Net3.inp  Net6.inp  README.txt
tpl/: CMakeLists.txt  Externals  Makefile.am
tpl/acro/: Externals  README
tpl/acro/admin/scripts/: trac-download-stats.sh
tpl/acro/tpl/: Externals
tpl/acro/tpl/boost/: CMakeLists.txt  Makefile.am  configure.ac
tpl/acro/tpl/boost/boost/bimap/: bimap.hpp
tpl/acro/tpl/boost/boost/bimap/detail/: map_view_iterator.hpp  set_view_iterator.hpp  user_interface_config.hpp
tpl/acro/tpl/boost/boost/bimap/relation/: mutant_relation.hpp
tpl/acro/tpl/boost/boost/config/: user.hpp
tpl/acro/tpl/boost/boost/fusion/container/vector/detail/: at_impl.hpp
tpl/acro/tpl/boost/libs/: CMakeLists.txt  Makefile.am
tpl/acro/tpl/vpykit/: Externals  default.ini
tpl/acro/tpl/vpykit/pyutilib.virtualenv/: CHANGELOG.txt  setup.py
tpl/acro/tpl/vpykit/pyutilib.virtualenv/example/: spotini.py  tevaspot.py
tpl/acro/tpl/vpykit/pyutilib.virtualenv/pyutilib/virtualenv/: header.py  vpy_create.py  vpy_install.py
tpl/acro/tpl/vpykit/pyutilib.virtualenv/scripts/: create_nsis_setup
tpl/acro/tpl/vpykit/pyutilib.virtualenv/tests/: test5.ini
tpl/epanet/: CMakeLists.txt  Externals  Makefile.am
tpl/epanet/CSA_/doc/: ReadMe_DLL.txt  Readme.txt  csa.bib
tpl/epanet/CSA_/include/: csa.h
tpl/epanet/CSA_/src/: CSA.cpp  csa.h
tpl/epanet/CSA_/test/: Smatrix.txt  csatest.cpp  sensoridNet3  sm.txt
tpl/epanet/EPANET_/.svn/: wc.db
tpl/epanet/EPANET_/include/: epanet2.h
tpl/epanet/EPANET_/src/: quality.c  text.h
tpl/epanet/EPANET_BTX_/doc/: epanet-btx.tex  pba.bib
tpl/epanet/EPANET_BTX_/include/: epanetbtx.h
tpl/epanet/EPANET_BTX_/src/: backtrack.c  btxfuns.h  btxtoolkit.c  btxtypes.h  btxutil.c  mempool.c
tpl/epanet/EPANET_MSX_/.svn/: wc.db
tpl/lzma/: .project  Makefile.am  lzma912.tar.bz2
tpl/lzma/C/Util/LzmaLib/: LzmaLib.vcproj
tpl/pyepanet/: README.txt  setup.py
tpl/pyepanet/pyepanet/: __init__.py  epanet2.py
tpl/sundry/: CHANGELOG  Makefile.am
tpl/sundry/src/: AppResponseAnalysis.cpp  CMakeLists.txt  ColinGlobals.cpp  LICENSE.txt  Makefile.am  SNLRound.cpp  VolVolume.cpp  ufl.cpp
tpl/sundry/sundry/: Makefile.am  SMVkernel.h  SNLRound.h  VolVolume.h  sundry.h  ufl.h
tpl/sundry/test/: Makefile.am  namespace.cpp
tpl/vpykit/: Externals  default.ini
tpl/vpykit/pyutilib.virtualenv/: CHANGELOG.txt  setup.py
tpl/vpykit/pyutilib.virtualenv/pyutilib/virtualenv/: header.py
(+222 files in other folders)
