AC_PREREQ(2.59)
AC_INIT([boost], [VOTD], [acro-help@software.sandia.gov])
AM_INIT_AUTOMAKE([foreign -Wall -Werror filename-length-max=256 tar-ustar])
AC_PROG_LIBTOOL
AC_PROG_CXXCPP
AC_PROG_LN_S
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AM_PROG_AS
AM_PROG_CC_C_O
AC_CONFIG_FILES([Makefile:Makefile.in]) 
AC_CONFIG_FILES([libs/Makefile:libs/Makefile.in]) 
AC_OUTPUT
